--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,8 +25,10 @@ services:
 
       # URL for the whole web service.
       # BASE_URL must be FRONTEND_HOST with http:// prepended.
+      # APP_HTTP_PORT must be consistent with the others.
       BASE_URL: "${BASE_URL:-http://localhost:3000}"
       FRONTEND_HOST: "${FRONTEND_HOST:-localhost:3000}"
+      APP_HTTP_PORT: "${APP_HTTP_PORT:-3000}"
 
       # JWT secret consumed by backend.
       JWT_SECRET: "${JWT_SECRET:-jwtS3cr3t}"
@@ -64,11 +66,12 @@ services:
           yarn dev --mode development"
     working_dir: /app/frontend
     ports:
-      - "${APP_HTTP_PORT:-3000}:8080"
+      - "${APP_HTTP_PORT:-3000}:${APP_HTTP_PORT:-3000}"
 
   frontend-purs-dev:
     <<: *backend
-    command: ["/bin/wait-for-it", "frontend-dev:8080", "--timeout=0", "--", "yarn", "pscid"]
+    command: >
+      /bin/wait-for-it frontend-dev:${APP_HTTP_PORT:-3000} --timeout=0 -- yarn pscid
     working_dir: /app/frontend
     depends_on:
       - frontend-dev
