--- a/rails/Gemfile
+++ b/rails/Gemfile
@@ -7,6 +7,7 @@ gem "rails", "~> 7.0.4", ">= 7.0.4.3"
 
 gem "bcrypt", "~> 3.1.7"
 gem "bootsnap", require: false
+gem "jwt"
 gem "pg", "~> 1.1"
 gem "pry-doc"
 gem "pry-rails"
