--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,16 @@
   "scripts": {
     "postinstall": "spago install",
     "clean": "rm -rf node_modules/{*,.bin,.yarn-integrity} output/* .spago/* dist/*",
-    "build": "spago build && webpack",
-    "dev": "webpack-dev-server",
+    "build": "spago build && vite build",
+    "dev": "vite",
     "test": "spago test",
-    "format": "purty --write src && purty --write test && prettier --write src",
-    "heroku-prebuild": "bin/install-purescript /app/.yarn/bin"
+    "format": "purty --write src && purty --write test && prettier --write src"
   },
   "keywords": [
     "purescript"
   ],
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@shoelace-style/shoelace": "^2.8.0",
     "decimal.js": "^10.3.1",
     "react": "^18.2.0",
@@ -25,25 +24,17 @@
     "xhr2": "^0.2.1"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.5.1",
-    "html-loader": "^3.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "http-server": "^14.1.0",
-    "mini-css-extract-plugin": "^2.5.2",
+    "@vitejs/plugin-react": "^4.0.4",
+    "autoprefixer": "^10.4.15",
     "postcss": "^8.4.5",
-    "postcss-import": "^14.0.2",
-    "postcss-loader": "^6.2.1",
-    "precss": "^4.0.0",
-    "prettier": "^2.5.1",
+    "postcss-import": "^15.1.0",
+    "prettier": "^3.0.2",
     "pscid": "^2.10.0",
     "purescript-language-server": "^0.17.1",
     "purescript-psa": "^0.8.2",
     "purty": "^7.0.0",
-    "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.15",
-    "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
+    "vite": "^4.4.9",
+    "vite-plugin-html-config": "^1.0.11"
   }
 }
